--- a/rotation/CMakeLists.txt
+++ b/rotation/CMakeLists.txt
@@ -6,7 +6,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 find_package(Eigen3 REQUIRED)
-
+find_package(gflags REQUIRED)
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
@@ -19,3 +19,6 @@ fixedaxis.cpp
 add_executable(activeaxis
 activeaxis.cpp
 	)
+
+target_link_libraries(fixedaxis gflags)
+target_link_libraries(activeaxis gflags)
